added header html and assets folder

--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./reset.css">
-		<link rel="stylesheet" href="./style.css">
+        <link
+            rel="shortcut icon"
+            type="image/x-icon"
+            href="./assets/icons/web_tab_icon.jpeg"
+        />
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.min.css"/>
+        <link rel="stylesheet" href="./reset.css" />
+        <link rel="stylesheet" href="./style.css" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <header class="header">
+            <ul class="header--items">
+                <li class="header--items__single">Our products</li>
+                <li class="header--items__single">Our values</li>
+                <li class="header--items__single">
+                    <img
+                        src="./assets/images/company_logo.png"
+                        width="100"
+                        height="100"
+                        alt="company logo"
+                    />
+                </li>
+                <li class="header--items__single">About us</li>
+                <li class="header--items__single">Contact us</li>
+                <li class="header--items__single">
+                    <i class="ri-shopping-cart-fill"></i>
+                </li>
+            </ul>
+        </header>
+    </body>
 </html>
