added banner section with background image in asset/images

--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
                 </li>
             </ul>
         </header>
+        <section class="banner">
+            <!-- use background-image in css, path : ./assets/images/banner-background.jpeg -->
+            <p class="banner--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, fugiat dicta! Sed illum error dicta omnis molestiae quam perferendis nam?</p>
+        </section>
+
     </body>
 </html>
