added footer html

--- a/index.html
+++ b/index.html
@@ -65,5 +65,20 @@
                 </div>
             </article>
         </section>
+		<footer class="footer">
+			<ul class="footer--items">
+				<li class="footer--items__single">
+                    <img
+                        src="./assets/images/company_logo.png"
+                        width="100"
+                        height="100"
+                        alt="company logo"
+                    />
+                </li>
+				<li class="footer--items__single">Contact</li>
+				<li class="footer--items__single">Inscrit toi à la newsletter</li>
+				<li class="footer--items__single">Conditions générales </li>
+			</ul>
+		</footer>
     </body>
 </html>
