--- a/index.html
+++ b/index.html
@@ -20,19 +20,17 @@
     <body>
         <header class="header">
             <ul class="header--items">
-                <li class="header--items__single">Our products</li>
-                <li class="header--items__single">Our values</li>
-                <li class="header--items__single">
+                <li class="header--items__single header--text">Our products</li>
+                <li class="header--items__single header--text">Our values</li>
+                <li class="header--items__single header--img">
                     <img
                         src="./assets/images/company_logo.png"
-                        width="100"
-                        height="100"
                         alt="company logo"
                     />
                 </li>
-                <li class="header--items__single">About us</li>
-                <li class="header--items__single">Contact us</li>
-                <li class="header--items__single">
+                <li class="header--items__single header--text">About us</li>
+                <li class="header--items__single header--text">Contact us</li>
+                <li class="header--items__single header--icon">
                     <i class="ri-shopping-cart-fill"></i>
                 </li>
             </ul>
