implemented css for article card with mobile version

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
                 <article class="article">
                     <div class="article--image">
                         <img
-                            style="width: 5em; object-fit: contain"
                             src="./assets/images/kona.jpeg"
                             alt="kona bike"
                         />
@@ -66,15 +65,40 @@
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
+                                <i class="ri-star-line"></i>
+                                <i class="ri-star-line"></i>
+                            </div>
+                            <div class="article--rating__total">- 32 reviews</div>
+                        </div>
+                        <p class="article--price">799.90€</p>
+                        <a href="./index.html" class="article--cta">Add to cart</a>
+                    </div>
+                </article>
+                <article class="article">
+                    <div class="article--image">
+                        <img
+                            src="./assets/images/seeker.jpg"
+                            alt="seeker bike"
+                        />
+                    </div>
+                    <div class="article--body">
+                        <h2 class="article--title">Seeker</h2>
+                        <p class="article--description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Adipisci, eaque?
+                        </p>
+                        <div class="article--rating">
+                            <div class="article--rating__stars">
+                                <i class="ri-star-fill"></i>
+                                <i class="ri-star-fill"></i>
+                                <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-line"></i>
                             </div>
-                            <div class="article--rating__total">- 47 avis</div>
+                            <div class="article--rating__total">- 45 reviews</div>
                         </div>
-                        <p class="article--price">799.90€</p>
-                        <!-- waiting for cart page to be active, use button instead -->
-                        <!-- <a href="./cart/index.html" class="article--cta">Panier</a> -->
-                        <button>Add to cart</button>
+                        <p class="article--price">2100.90€</p>
+                        <a href="./index.html" class="article--cta">Add to cart</a>
                     </div>
                 </article>
             </section>
