added hover shadow for article and outofstock option

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
         <main>
             <section class="banner">
-                <!-- use background-image in css, path : ./assets/images/banner-background.jpeg -->
                 <p class="banner--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Dolorum, fugiat dicta! Sed illum error dicta omnis molestiae
@@ -75,6 +74,7 @@
                     </div>
                 </article>
                 <article class="article">
+					<span class="article--outofstock">Out of stock</span>
                     <div class="article--image">
                         <img
                             src="./assets/images/seeker.jpg"
