--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     />
                 </li>
                 <li class="header--items__single header--text">Ours reviews</li>
-                <li class="header--items__single header--text"><a href="mailto:bicycle@gmail.com">Contact us</a></li>
+                <li class="header--items__single header--text">
+                    <a href="mailto:bicycle@gmail.com">Contact us</a>
+                </li>
                 <li class="header--items__single header--icon">
                     <i class="ri-shopping-cart-fill"></i>
                 </li>
@@ -39,26 +41,23 @@
         <main>
             <section class="banner">
                 <p class="banner--text">
-                    Discover cycling excellence with BICYCLE.
-                    Stylish, high-performance bikes designed for every
-                    adventure. Embark on a unique two-wheeled experience.
+                    Discover cycling excellence with BICYCLE. Stylish,
+                    high-performance bikes designed for every adventure. Embark
+                    on a unique two-wheeled experience.
                 </p>
             </section>
-            <section class="kona-bike">
-                <h1>KONA</h1>
-                <section class="article">
+            <h1 class="kona-bike">KONA</h1>
+            <section class="articleContainer">
+                <article class="article">
                     <div class="article--image">
-                        <img
-                            src="./assets/images/kona.jpeg"
-                            alt="kona bike"
-                        />
+                        <img src="./assets/images/kona.jpeg" alt="kona bike" />
                     </div>
                     <div class="article--body">
                         <h2 class="article--title">Kona</h2>
                         <p class="article--description">
                             Ride into adventure with style and performance.
-                            Explore the world on two wheels with our bikes,
-                            your passport to freedom.
+                            Explore the world on two wheels with our bikes, your
+                            passport to freedom.
                         </p>
                         <div class="article--rating">
                             <div class="article--rating__stars">
@@ -68,100 +67,162 @@
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-line"></i>
                             </div>
-                            <div class="article--rating__total">- 4 reviews</div>
+                            <div class="article--rating__total">
+                                - 4 reviews
+                            </div>
                         </div>
                         <p class="article--price">799.90€</p>
-                        <a href="./index.html" class="article--cta">Add to cart</a>
+                        <a href="./index.html" class="article--cta"
+                            >Add to cart</a
+                        >
                     </div>
-                </section>
+                </article>
             </section>
-            <section>
-                    <div class="kona-info">
-                        <h2>Bienvenue dans l'Élégance et la Performance: Découvrez notre Vélo de Ville Premium</h2>
-                        <p>Chez BICYCLE, nous sommes fiers de présenter notre dernier joyau de la collection, le Vélo de Ville Premium. Conçu pour les passionnés de cyclisme urbain et les explorateurs citadins, ce vélo incarne l'alliance parfaite entre élégance, confort et performance.</p>
-                        <h3>Caractéristiques Clés:</h3>
-                        <ul class="kona-info">
-                            <li>Design Épuré: Avec des lignes épurées et des finitions impeccables,
-                                notre Vélo de Ville Premium attire les regards partout où il va.
-                                C'est bien plus qu'un moyen de transport, c'est une déclaration de style.
-                            </li>
-                            <li>Confort Inégalé: Le confort est notre priorité. Profitez d'une conduite
-                                fluide grâce à une position assise ergonomique, une selle rembourrée de
-                                 haute qualité et des poignées antidérapantes. Chaque trajet devient
-                                 une expérience agréable.
-                            </li>
-                            <li>Performance Avancée: Doté d'une transmission fluide et
-                                de freins réactifs, notre Vélo de Ville Premium offre une
-                                performance fiable à chaque coup de pédale. Que ce soit pour des déplacements
-                                quotidiens ou des balades relaxantes, ce vélo répondra à toutes vos attentes.
-                            </li>
-                            <li>Praticité Urbaine: Équipé d'un porte-bagages intégré,
-                                de garde-boue stylisés et de feux avant/arrière, notre Vélo de Ville Premium
-                                est conçu pour s'adapter parfaitement à la vie urbaine. Naviguez dans
-                                la ville avec aisance et style.</li>
-                        </ul>
-                    </div>
+
+            <section class="kona-info">
+                    <h2>
+                        Bienvenue dans l'Élégance et la Performance: Découvrez
+                        notre Vélo de Ville Premium
+                    </h2>
+                    <p>
+                        Chez BICYCLE, nous sommes fiers de présenter notre
+                        dernier joyau de la collection, le Vélo de Ville
+                        Premium. Conçu pour les passionnés de cyclisme urbain et
+                        les explorateurs citadins, ce vélo incarne l'alliance
+                        parfaite entre élégance, confort et performance.
+                    </p>
+                    <h3>Caractéristiques Clés:</h3>
+                    <ul class="kona-info">
+                        <li>
+                            Design Épuré: Avec des lignes épurées et des
+                            finitions impeccables, notre Vélo de Ville Premium
+                            attire les regards partout où il va. C'est bien plus
+                            qu'un moyen de transport, c'est une déclaration de
+                            style.
+                        </li>
+                        <li>
+                            Confort Inégalé: Le confort est notre priorité.
+                            Profitez d'une conduite fluide grâce à une position
+                            assise ergonomique, une selle rembourrée de haute
+                            qualité et des poignées antidérapantes. Chaque
+                            trajet devient une expérience agréable.
+                        </li>
+                        <li>
+                            Performance Avancée: Doté d'une transmission fluide
+                            et de freins réactifs, notre Vélo de Ville Premium
+                            offre une performance fiable à chaque coup de
+                            pédale. Que ce soit pour des déplacements quotidiens
+                            ou des balades relaxantes, ce vélo répondra à toutes
+                            vos attentes.
+                        </li>
+                        <li>
+                            Praticité Urbaine: Équipé d'un porte-bagages
+                            intégré, de garde-boue stylisés et de feux
+                            avant/arrière, notre Vélo de Ville Premium est conçu
+                            pour s'adapter parfaitement à la vie urbaine.
+                            Naviguez dans la ville avec aisance et style.
+                        </li>
+                    </ul>
             </section>
             <section>
                 <div class="customer-reviews">
-                    <h2>Vos avis: </h2>
-                        <div class="review">
-                            <p>"Je suis absolument ravie de mon Vélo de Ville Premium! Le design chic et la conduite fluide font de chaque trajet un plaisir. Confortable, élégant, et parfait pour mes déplacements quotidiens en ville. Je ne pourrais pas être plus satisfaite de mon achat!"</p>
-                            <p class="reviewer">- Sara C.</p>
-                            <div class="article--rating__stars">
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                            </div>
+                    <h2>Vos avis:</h2>
+                    <div class="review">
+                        <p>
+                            "Je suis absolument ravie de mon Vélo de Ville
+                            Premium! Le design chic et la conduite fluide font
+                            de chaque trajet un plaisir. Confortable, élégant,
+                            et parfait pour mes déplacements quotidiens en
+                            ville. Je ne pourrais pas être plus satisfaite de
+                            mon achat!"
+                        </p>
+                        <p class="reviewer">- Sara C.</p>
+                        <div class="article--rating__stars">
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
                         </div>
-                        <div class="review">
-                            <p>"Un vélo qui ne déçoit pas! J'ai choisi le Vélo de Ville Premium pour son look moderne et son côté pratique. Les freins réactifs et la transmission fluide font de chaque virée un véritable régal. Un excellent investissement pour tous les amateurs de cyclisme urbain."</p>
-                            <p class="reviewer">- Jean L.</p>
-                            <div class="article--rating__stars">
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                            </div>
+                    </div>
+                    <div class="review">
+                        <p>
+                            "Un vélo qui ne déçoit pas! J'ai choisi le Vélo de
+                            Ville Premium pour son look moderne et son côté
+                            pratique. Les freins réactifs et la transmission
+                            fluide font de chaque virée un véritable régal. Un
+                            excellent investissement pour tous les amateurs de
+                            cyclisme urbain."
+                        </p>
+                        <p class="reviewer">- Jean L.</p>
+                        <div class="article--rating__stars">
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
                         </div>
-                        <div class="review">
-                            <p>"Je recommande vivement le Vélo de Ville Premium! J'ai été impressionné par la qualité de fabrication et les détails bien pensés. Confortable sur de longues distances, ce vélo s'adapte parfaitement à la vie citadine. Une valeur sûre pour tous les passionnés de vélo."</p>
-                            <p class="reviewer">- Lyam G.</p>
-                            <div class="article--rating__stars">
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                            </div>
+                    </div>
+                    <div class="review">
+                        <p>
+                            "Je recommande vivement le Vélo de Ville Premium!
+                            J'ai été impressionné par la qualité de fabrication
+                            et les détails bien pensés. Confortable sur de
+                            longues distances, ce vélo s'adapte parfaitement à
+                            la vie citadine. Une valeur sûre pour tous les
+                            passionnés de vélo."
+                        </p>
+                        <p class="reviewer">- Lyam G.</p>
+                        <div class="article--rating__stars">
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
                         </div>
-                        <div class="review">
-                            <p>"Ce vélo a changé ma façon de me déplacer en ville. Léger, maniable et incroyablement élégant, le Vélo de Ville Premium a dépassé toutes mes attentes. Les fonctionnalités pratiques, comme le porte-bagages intégré, en font le compagnon idéal pour mes trajets quotidiens. Je le recommande à tous ceux qui recherchent un vélo de qualité supérieure."</p>
-                            <p class="reviewer">- Anna B.</p>
-                            <div class="article--rating__stars">
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                                <i class="ri-star-fill"></i>
-                            </div>
+                    </div>
+                    <div class="review">
+                        <p>
+                            "Ce vélo a changé ma façon de me déplacer en ville.
+                            Léger, maniable et incroyablement élégant, le Vélo
+                            de Ville Premium a dépassé toutes mes attentes. Les
+                            fonctionnalités pratiques, comme le porte-bagages
+                            intégré, en font le compagnon idéal pour mes trajets
+                            quotidiens. Je le recommande à tous ceux qui
+                            recherchent un vélo de qualité supérieure."
+                        </p>
+                        <p class="reviewer">- Anna B.</p>
+                        <div class="article--rating__stars">
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
+                            <i class="ri-star-fill"></i>
                         </div>
+                    </div>
                 </div>
             </section>
             <section class="container">
                 <h2>CONTACT US</h2>
                 <form action="#" method="post">
                     <label for="name">Name :</label>
-                        <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" name="name" required />
                     <label for="firstname">First Name :</label>
-                        <input type="text" id="firstname" name="firstname" required>
+                    <input
+                        type="text"
+                        id="firstname"
+                        name="firstname"
+                        required
+                    />
                     <label for="email">Email :</label>
-                        <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" required />
                     <label for="message">Message :</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
+                    <textarea
+                        id="message"
+                        name="message"
+                        rows="4"
+                        required
+                    ></textarea>
                     <button type="submit">Envoyer</button>
                 </form>
             </section>
@@ -178,14 +239,35 @@
                     />
                 </li>
                 <li class="footer--items__single-text">
-                    Subscribe to the newsletter</li>
+                    Subscribe to the newsletter
+                </li>
                 <li class="footer--items__single-text">Terms and conditions</li>
             </ul>
             <ul class="footer--social-items">
-                <li class="social-icon"><img src="./assets/icons/facebook_icon.png" alt="facebook-icon"></li>
-                <li class="social-icon"><img src="./assets/icons/instagram_icon.png" alt="instagram-icon"></li>
-                <li class="social-icon"><img src="./assets/icons/youtube_icon.png" alt="youtube-icon"></li>
-                <li class="social-icon"><img src="./assets/icons/twitter_icon.png" alt="twitter-icon"></li>
+                <li class="social-icon">
+                    <img
+                        src="./assets/icons/facebook_icon.png"
+                        alt="facebook-icon"
+                    />
+                </li>
+                <li class="social-icon">
+                    <img
+                        src="./assets/icons/instagram_icon.png"
+                        alt="instagram-icon"
+                    />
+                </li>
+                <li class="social-icon">
+                    <img
+                        src="./assets/icons/youtube_icon.png"
+                        alt="youtube-icon"
+                    />
+                </li>
+                <li class="social-icon">
+                    <img
+                        src="./assets/icons/twitter_icon.png"
+                        alt="twitter-icon"
+                    />
+                </li>
             </ul>
         </footer>
     </body>
