hosted app with firebase and moved assets/css into public folder

--- a/public/index.html
+++ b/public/index.html
@@ -80,49 +80,47 @@
             </section>
 
             <section class="kona-info">
-                    <h2>
-                        Bienvenue dans l'Élégance et la Performance: Découvrez
-                        notre Vélo de Ville Premium
-                    </h2>
-                    <p>
-                        Chez BICYCLE, nous sommes fiers de présenter notre
-                        dernier joyau de la collection, le Vélo de Ville
-                        Premium. Conçu pour les passionnés de cyclisme urbain et
-                        les explorateurs citadins, ce vélo incarne l'alliance
-                        parfaite entre élégance, confort et performance.
-                    </p>
-                    <h3>Caractéristiques Clés:</h3>
-                    <ul class="kona-info">
-                        <li>
-                            Design Épuré: Avec des lignes épurées et des
-                            finitions impeccables, notre Vélo de Ville Premium
-                            attire les regards partout où il va. C'est bien plus
-                            qu'un moyen de transport, c'est une déclaration de
-                            style.
-                        </li>
-                        <li>
-                            Confort Inégalé: Le confort est notre priorité.
-                            Profitez d'une conduite fluide grâce à une position
-                            assise ergonomique, une selle rembourrée de haute
-                            qualité et des poignées antidérapantes. Chaque
-                            trajet devient une expérience agréable.
-                        </li>
-                        <li>
-                            Performance Avancée: Doté d'une transmission fluide
-                            et de freins réactifs, notre Vélo de Ville Premium
-                            offre une performance fiable à chaque coup de
-                            pédale. Que ce soit pour des déplacements quotidiens
-                            ou des balades relaxantes, ce vélo répondra à toutes
-                            vos attentes.
-                        </li>
-                        <li>
-                            Praticité Urbaine: Équipé d'un porte-bagages
-                            intégré, de garde-boue stylisés et de feux
-                            avant/arrière, notre Vélo de Ville Premium est conçu
-                            pour s'adapter parfaitement à la vie urbaine.
-                            Naviguez dans la ville avec aisance et style.
-                        </li>
-                    </ul>
+                <h2>
+                    Bienvenue dans l'Élégance et la Performance: Découvrez notre
+                    Vélo de Ville Premium
+                </h2>
+                <p>
+                    Chez BICYCLE, nous sommes fiers de présenter notre dernier
+                    joyau de la collection, le Vélo de Ville Premium. Conçu pour
+                    les passionnés de cyclisme urbain et les explorateurs
+                    citadins, ce vélo incarne l'alliance parfaite entre
+                    élégance, confort et performance.
+                </p>
+                <h3>Caractéristiques Clés:</h3>
+                <ul class="kona-info">
+                    <li>
+                        Design Épuré: Avec des lignes épurées et des finitions
+                        impeccables, notre Vélo de Ville Premium attire les
+                        regards partout où il va. C'est bien plus qu'un moyen de
+                        transport, c'est une déclaration de style.
+                    </li>
+                    <li>
+                        Confort Inégalé: Le confort est notre priorité. Profitez
+                        d'une conduite fluide grâce à une position assise
+                        ergonomique, une selle rembourrée de haute qualité et
+                        des poignées antidérapantes. Chaque trajet devient une
+                        expérience agréable.
+                    </li>
+                    <li>
+                        Performance Avancée: Doté d'une transmission fluide et
+                        de freins réactifs, notre Vélo de Ville Premium offre
+                        une performance fiable à chaque coup de pédale. Que ce
+                        soit pour des déplacements quotidiens ou des balades
+                        relaxantes, ce vélo répondra à toutes vos attentes.
+                    </li>
+                    <li>
+                        Praticité Urbaine: Équipé d'un porte-bagages intégré, de
+                        garde-boue stylisés et de feux avant/arrière, notre Vélo
+                        de Ville Premium est conçu pour s'adapter parfaitement à
+                        la vie urbaine. Naviguez dans la ville avec aisance et
+                        style.
+                    </li>
+                </ul>
             </section>
             <section>
                 <div class="customer-reviews">
